Removing add user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,10 @@
             <li class="list-inline-item">
               <a routerLink="/users" class="btn btn-info">Users list</a>
                 </li>
-            <li class="list-inline-item">
+           <!-- <li class="list-inline-item">
               <a routerLink="/adduser" class="btn btn-info">Add User</a>
                 </li>
+          -->
           </ul>
         </div>
       </div>
